bug fix losing scrollbars in tabs

--- a/app/less/jpconsole.less
+++ b/app/less/jpconsole.less
@@ -83,6 +83,10 @@
     position: absolute;
     top: 45px;
     left: 10px;
+    z-index: 0;
+  }
+  .jp-current-outer{
+    z-index: 1000;
   }
   .jp-tab-content {
     display: none;
